--- a/server/js/基础概念.md
+++ b/server/js/基础概念.md
@@ -1,2 +1,16 @@
 
+ ## 2020-04
 1. react diff源码解析
+
+## 2020-05
+webpack
+1. yarn run [script] [<args>]
+- yarn build --env.version=${VERSION_NUM}
+  yarn 执行 package.json 文件中定义的 npm 脚本中的 build 命令，并传递脚本参数 --env 。
+
+2. webpack 配置对象文件导出为一个函数时，env 环境对象作为参数传递至配置文件中，使用插件 html-webpack-plugin 打包到模板 HTML 文件中，在模板 HTML 文件赋值到 var 变量，挂在在 window 上（全局变量）；html-webpack-plugin 插件可以 配置参数，可以使用自定义模板 template 或者 默认模板。自定义模板可以使用 loader , 默认的模板是 lodash 格式。
+
+3. webpack loader 和 plugin
+- webpack 只能识别 js 文件，需要 loader 加载如 css, less, img 等资源，webpack 才能打包到 bundle。
+
+4. 插件需要实例化使用
