--- a/server/js/基础概念.md
+++ b/server/js/基础概念.md
@@ -1,16 +1,70 @@
+## 2020-04
 
- ## 2020-04
-1. react diff源码解析
+1. react diff 源码解析
 
 ## 2020-05
+
 webpack
-1. yarn run [script] [<args>]
-- yarn build --env.version=${VERSION_NUM}
+
+1. yarn run [script][<args>]
+
+- yarn build --env.version=\${VERSION_NUM}
   yarn 执行 package.json 文件中定义的 npm 脚本中的 build 命令，并传递脚本参数 --env 。
 
 2. webpack 配置对象文件导出为一个函数时，env 环境对象作为参数传递至配置文件中，使用插件 html-webpack-plugin 打包到模板 HTML 文件中，在模板 HTML 文件赋值到 var 变量，挂在在 window 上（全局变量）；html-webpack-plugin 插件可以 配置参数，可以使用自定义模板 template 或者 默认模板。自定义模板可以使用 loader , 默认的模板是 lodash 格式。
 
 3. webpack loader 和 plugin
+
 - webpack 只能识别 js 文件，需要 loader 加载如 css, less, img 等资源，webpack 才能打包到 bundle。
 
 4. 插件需要实例化使用
+
+5. typescipt
+- 定义数组两种方式： 数组泛型 ```Array<number>``` 等价于 ```number[]```
+
+- type C = { a: string, b?: number }
+- interface C { a: string }
+- 字符串索引签名 interface Config { [propsName: string]: any }，描述了对象索引的类型
+- 类型断言 (Config as any).attr 绕开类型检查
+- TypeScript 支持两种索引签名：字符串和数字。 可以同时使用两种类型的索引，但是数字索引的返回值必须是字符串索引返回值类型的子类型。**存疑**
+
+- 类类型 class Clock implements ClockInterface {}
+- 类继承 extends，派生类中定义构造函数，在 constructor 中访问 this 的属性之前必须调用 super()，它会执行基类的构造函数
+- 参数属性（构造器参数）实现把声明和赋值合并到一处。
+- 类的实例成员（当类实例化的时候才被初始化的属性）和静态成员（存在类本身上非实例上）：static
+
+- 类型推论
+- 函数类型包括参数类型和返回值类型
+- this 参数和 this 参数在回调函数里 **回调参数存疑**
+
+- 泛型之"类型变量"，用于表示类型而不是值
+```ts
+function test<T>(arg: T): T {return arg;} // 给test添加了类型变量T，用<>括起来；泛型函数 test 接收类型参数 T 和 参数 arg；泛型变量作为类型的一部分，非整个类型
+```
+- 使用泛型变量时，函数体需要正确定义通用的类型
+- "泛型类型"
+```ts
+function test<T>(args: Array<T>): Array<T> { return args; }
+
+let testFn: <T>(args: Array<T>) => Array<T> = test; // 泛型函数定义类型
+
+let testFn: { <T>(args: Array<T>): Array<T> } = test; // 使用带有调用签名的对象字面量定义泛型函数
+
+interface TestFn { <T>(args: Array<T>): Array<T> } // 使用泛型接口
+let testFn: TestFn = test;
+```
+- 泛型参数作为接口的参数（比如： ```Dictionary<string>```而不只是```Dictionary```）。
+- 泛型类使用<>括起泛型类型，跟在类名后面；泛型类实例化时传入具体类型。静态属性不能使用功能泛型类型。
+- 泛型约束：定义接口来描述约束条件，约束泛型包含什么属性等
+```ts
+interface LengthWise { length: number };
+function test<T extends LengthWise>(arg: T): T { return T; } // arg 具有 length 属性
+```
+- 在泛型约束中使用类型参数：一个类型参数被另一个类型参数所约束 **类型参数指的是参数是类型不是值**
+```ts
+function test(obj: T, key: K) { return obj[key]; } // K 需要包含在 T 中
+```
+- 泛型里使用类类型**疑惑 new()**
+
+- 使用枚举：通过枚举属性访问枚举成员，通过枚举名称访问枚举类型
+- 枚举反向映射，
