--- a/server/js/笔记/4.sql脚本.md
+++ b/server/js/笔记/4.sql脚本.md
@@ -94,7 +94,7 @@ select s1.uid, s2.name from student s1, student s2 where s1.uid = s2.uid;
 
 ## sequelize
 
-关系：
+### 关系 association：
 
 - hasOne: 一对一
 - hasMany: 一对多
@@ -109,3 +109,11 @@ S.hasOne(D);
 D.belongsTo(S);
 D.belongsToMany(S);
 ```
+
+### 事务 Transaction类
+
+### include
+
+subQuery，required 属性
+
+## sql 函数
