--- a/server/js/笔记/1.对象和继承.md
+++ b/server/js/笔记/1.对象和继承.md
@@ -86,6 +86,16 @@ console.log(person1 instanceof Person); // true
 
 > 每一个函数上都有一个 prototype 属性，这个属性是一个指针，指向一个对象，这个对象包含了一些属性和方法，这些属性和方法可以被所有由这个函数创建的实例所共享。
 
+> 每个构造函数拥有prototype属性，指向构造函数的原型对象，这个原型对象有一个constructor属性指回构造函数；
+  每个实例都拥有__proto__属性，当使用构造函数创建实例时，实例的__proto__属性将指向构造函数的原型对象。
+  
+  ```js
+  function Person() {}
+  var personl = new Person();
+  Person.prototype.constructor === Person; // true
+  personl.__proto__ === Person.prototype; // true
+  ```
+
 ```js
 function Person() {}
 console.log(Person.prototype.constructor); // Person
