--- a/server/js/笔记/11.一些网络知识.md
+++ b/server/js/笔记/11.一些网络知识.md
@@ -4,3 +4,15 @@
 2. 视频封装协议指的是常见的 mp4/avi/flv/rmvb/mkv/ts 等后缀格式。
 3. 音频编码指的是音频数据的编码方式，常见的如：MP3、 PCM、WAV、AAC、AC-3 等。
 4. 视频编码指的就是画面图像的编码压缩方式，一般有 H263、H264、HEVC（H265）、MPEG-2 、MPEG-4 等，其中 H264 是目前比较常见的编码方式。
+
+## 视频
+
+1. 分辨率
+
+- P: 逐行扫描，几 P 则表示纵向有多少行像素。
+  1080P 是一种视频显示格式，是一种在逐行扫描下达到 1920x1080 的分辨率的显示格式。外语字母 P（Progressive scan）是逐行扫描的意思。表示垂直方向上有 1080 条水平扫描线。通常 1080P 的画面分辨率为 1920x1080。
+- K: 横向排列有多少像素，比如：2k 就是视频横向大约有 2000 列像素、4k 就是视频横向大约有 4000 列像素。
+
+2. 帧率
+
+- 大家把图片快速播放就可以形成动态的视频效果，这是视频播放原理。一般来说 1 秒连续播放 24 个画面就会形成动态效果，那么这个每秒播放 24 个画面就是视频的“帧率”。
