--- a/server/js/笔记/4.sql脚本.md
+++ b/server/js/笔记/4.sql脚本.md
@@ -16,7 +16,7 @@
    > 1. 能用 inner join 连接尽量使用 inner join 连接
    > 2. 子查询的性能又比外连接性能慢，尽量用外连接来替换子查询
 
-## 数据库查询
+## 表连接
 
 ```sql
 -- 创建 student 表
@@ -90,7 +90,16 @@ select s1.uid, s2.subject, s2.score from student s1, score s2;
 select s1.uid, s2.name from student s1, student s2 where s1.uid = s2.uid;
 ```
 
-7. 子查询: To be continue...
+7. 子查询:
+
+```sql
+select * from student where uid in (select uid from score where score > 85);
+```
+
+## 外键
+
+1. 外键一定是在从表中创建，从而找到与主表之间的联系；从表负责维护二者之间的关系。
+2. 建立外键关系的对应列必须建立了索引。
 
 ## sequelize
 
@@ -101,16 +110,59 @@ select s1.uid, s2.name from student s1, student s2 where s1.uid = s2.uid;
 - belongsTo: 一对多
 - belongsToMany: 多对多
 
-D 定义 foreignKey 指向 S
+1. belongsTo 关联表示一对一关系的外键存在 源模型（即从表）
 
-```js
-S.hasOne(D);
-S.hasOne(D);
-D.belongsTo(S);
-D.belongsToMany(S);
-```
+   ```js
+   SourceModel.belongsTo(TargetModel, { as, foreignKey, targetKey });
+   ```
 
-### 事务 Transaction类
+   SourceModel 中的 foreignKey 和 TargetModel 中的 targetKey 进行关联
+   as: TargetModel 的别名
+   foreignKey: SourceModel 中的外键字段名称，默认为 (as || TargetModel.name)+TargetModel.primaryKey
+   targetKey: TargetModel 中的目标键字段名称，默认为 TargetModel 主键
+
+2. hasOne 关联表示一对一关系的外键存在于 目标模型（即从表）
+
+   ```js
+   SourceModel.hasOne(TargetModel, { as, foreignKey });
+   ```
+
+   SourceModel 中的主键和 TargetModel 中的外键进行关联
+   as: TargetModel 的别名
+   foreignKey: TargetModel 中的外键字段名称，默认为 (as || SourceModel.name)+SourceModel.primaryKey
+
+3. hasMany 关联表示一对一关系的外键存在于 目标模型（即从表）
+
+   ```js
+   SourceModel.hasMany(TargetModel, { as, foreignKey, sourceKey });
+   ```
+
+   TargetModel 中的外键与 SourceModal 中的主键关联
+   as: TargetModel 别名
+   foreignKey: TargetModel 中外键名称，默认为 SourceModel.name+SourceMode.primaryKey
+   sourceKey: SourceModel 中关联键名称，默认为 SourceModel.primaryKey
+
+   这里 as 的值并不影响 key 的默认值
+
+4. belongsToMany 多对多
+
+   ```js
+   SourceModel.belongsToMany(TargetModel, {
+     through: AssociationModel,
+     as,
+     foreignKey,
+     otherKey,
+   });
+   ```
+
+   通过中间表进行关联
+   as: AssociationModel 的别名
+   foreignKey: AssociationModel 中与 SourceModel 主键关联的外键名称，默认为 SourceModel.name + SourceModel.primaryKey
+   otherKey: AssociationModel 中与 TargetModel 主键关联的外键名称，默认为 TargetModel.name + TargetModel.primaryKey
+
+   这里 as 的值并不影响 key 的默认值
+
+### 事务 Transaction 类
 
 ### include
 
