--- a/server/css/4.经典布局问题.md
+++ b/server/css/4.经典布局问题.md
@@ -92,7 +92,7 @@ flex 容器的属性：
 
 1. flex-direction(主轴方向): row | row-reverse | column | column-reverse;
 2. flex-wrap(容器内项目是否可换行): nowrap | wrap | wrap-reverse;
-3. flex-flow: flex-direction 和 flex-wrap 的简写形式
+3. flex-flow: flex-direction 和 flex-wrap 的简写形式 （**忽略，不记**）
 4. **justify-content**(定义了项目在主轴的对齐方式): flex-start | flex-end | center | space-between | space-around;
 5. **align-items**(定义了项目在交叉轴上的对齐方式): flex-start | flex-end | center | baseline | stretch;
 6. align-content(定义了多根轴线的对齐方式，如果项目只有一根轴线，那么该属性将不起作用): flex-start | flex-end | center | space-between | space-around | stretch;
