--- a/server/css/5.移动端网页适配.md
+++ b/server/css/5.移动端网页适配.md
@@ -19,6 +19,7 @@ vw vh 定义容器
 
 大多数浏览器默认 HTML 的字号为 16px
 
+**rem em**为相对单位。rem是相对于根元素的字体大小进行设置。
 ---
 
 这是一篇自下而上的文章，发现问题，找了解决方案，对为什么这么可以解决产生疑问？
@@ -66,7 +67,7 @@ canvas.style.width = viewport.width + 'px'; // 2. canvas按照原尺寸展示
 ### [像素 与 分辨率 ](https://zhuanlan.zhihu.com/p/162373853)
 
 1. 设备像素（物理像素）
-2. 设备独立像素=Device Independent Pixel/dpi（逻辑像素）
+2. 设备独立像素=Device Independent Pixel/dpi（**逻辑**像素）
 
    > 设备独立像素就是在设备像素的基础上人为定义的一层逻辑像素。举个例子，一个屏幕的物理像素是 2560*1440，但是我们可以人为定义这个屏幕就是 1280*720，所以 1 个设备独立像素就用 4 个设备像素显示。传统的 pc 屏幕，1 个设备像素就等于 1 个设备独立像素；但是现在市面上有很多高清屏幕，比如苹果的 retina 屏幕，这是由于 1 个像素点用多个物理像素显示，所以高清屏的画质就更加锐利，没有颗粒感，显示效果出众。
 
@@ -104,19 +105,19 @@ canvas.style.width = viewport.width + 'px'; // 2. canvas按照原尺寸展示
 
 4. [三种 viewport](https://www.cnblogs.com/learnings/p/10441224.html)
 
-- visual viewport 可见视口，指屏幕宽度
+- **visual viewport** 可见视口，指屏幕宽度
 
 ```js
 window.screen.width;
 ```
 
-- layout viewport 布局视口，指 DOM 宽度
+- **layout viewport** 布局视口，指 DOM 宽度
 
 ```js
 document.documentElement.clientWidth;
 ```
 
-- ideal viewport 理想视口，使布局视口就是可见视口即为理想视口
+- **ideal viewport** 理想视口，使布局视口就是可见视口即为理想视口
 
 - meta 标签 name 属性为 viewport
 
@@ -182,23 +183,62 @@ document.documentElement.clientWidth;
    2.2 用 js 根据屏幕尺寸和 dpr 精确设置不同屏幕所应有的 rem 基准值和 initial-scale 缩放值
 
 ### [移动端页面开发适配 rem 布局原理](https://segmentfault.com/a/1190000007526917)
+[网易和淘宝适配](https://www.cnblogs.com/136asdxxl/p/10612322.html)
 
-1. rem + vw（不需要考虑 dpr）
-   1.1 vw: 1vw 等于视口宽度的 1%
+#### rem + vw（不需要考虑 dpr）
+   ###### vw: 1vw 等于视口宽度的 1%
    若设计图是 750px；令 1rem = 100px，求 html 的 font-size 的 vw 表示，其他距离可以用 rem 来表示。
 
    ```css
    /*
-   1rem = 100px;
    100vw = 750px;
+   1rem = 100px; // 即令html的基准font-size为100px，取100是为了方便计算 
    1rem = ?vw; ?=13.333333333333334
    */
    html {
      font-size: 13.333333333333334vw;
    }
    ```
+#### rem 
+   计算了根节点 font-size 后，设计图上标注的其他尺寸为 d 再转换成 rem。
 
-   1.2 计算了根节点 font-size 后，设计图上标注的其他尺寸为 d 再转换成 rem。如 16px = 0.16rem。
+   核心：
+   1. (clientWidth)逻辑分辨率 * dpr = 物理分辨率(设计稿)；
+   2. 元素占整屏的比例不变；
+
+   ###### 手淘
+
+   ```js
+   // font-size = clientWidth / 10; 
+   // clientWidth为375，则font-size=37.5;750设计稿的150px=150/37.5rem
+   ```
+
+   ```html
+   <!-- 计算html的基准 -->
+   <script>
+      var docEl = document.documentElement;
+      var dpr = window.devicePixelRatio || 1;
+      var rem = docEl.clientWidth * dpr / 10;
+      var scale = 1 / dpr;
+      // 动态写入样式
+      docEl.style.fontSize = rem * scale + 'px';
+   </script>
+   ```
+   ```scss
+   // px转换为rem
+   @function px2rem($px) {
+      @return ($px/37.5) + rem;
+   }
+   body {
+      font-size: px2rem(16);
+   }
+   ```
+
+   ###### 网易
+   ```js
+   // font-size = clientWidth / (750/100); 
+   // clientWidth为375，则font-size=50; 750设计稿的150px=1.5rem
+   ```
 
 ### 疑问：
 
