--- a/server/css/元素或标签/1.canvas.md
+++ b/server/css/元素或标签/1.canvas.md
@@ -9,3 +9,9 @@
 我们用 element 表示 canvas 元素，用 canvas 表示绘图表面，src 表示绘制的内容，dest 表示展示的内容，缩放规则为：dest.size = src.size \* (element.size / canvas.size)。
 
 即：先按照绘制表面的尺寸绘制出元素，再缩放（元素尺寸为标准 1）。坐标也是相同的偏移规则。
+
+4. 在移动端，画布的大小要根据屏幕的大小进行适配。要做 Retina 屏适配，关键是知道当前屏幕的设备像素比，然后将 canvas 放大到该设备像素比来绘制，然后将 canvas 压缩到一倍来展示。
+
+即：
+要设置canvas的画布大小，使用的是 canvas.width 和 canvas.height；
+要设置画布的实际渲染大小，使用的 style 属性或CSS设置的 width 和height，只是简单的对画布进行缩放。
