--- a/server/css/7.各种宽高.md
+++ b/server/css/7.各种宽高.md
@@ -1,17 +1,27 @@
 # html 各种宽高
-[JS中关于clientWidth offsetWidth scrollWidth 等的含义](https://www.cnblogs.com/fullhouse/archive/2012/01/16/2324131.html)
 
-[js宽高](https://cloud.tencent.com/developer/article/1537071)
+[JS 中关于 clientWidth offsetWidth scrollWidth 等的含义](https://www.cnblogs.com/fullhouse/archive/2012/01/16/2324131.html)
+
+[js 宽高](https://cloud.tencent.com/developer/article/1537071)
 
 ## window
+
 1. window.innerWidth
-属性返回以像素为单位的窗口的内部宽度（即布局视口的宽度）。如果垂直滚动条存在，则这个属性包括滚动条的宽度。
-属性是只读的，若想改变窗口的宽度，通过window的方法（如resizeBy(), resizeTo()）调整。
-
-
+   属性返回以像素为单位的窗口的内部宽度（即布局视口的宽度）。如果垂直滚动条存在，则这个属性包括滚动条的宽度。
+   属性是只读的，若想改变窗口的宽度，通过 window 的方法（如 resizeBy(), resizeTo()）调整。
 
 ## Element
-1. element.clientWidth
-属性表示以**像素**为单位的元素的内部宽度。属性包括内边距padding，不包括边框border、外边距margin和垂直滚动条。
-当在根元素(html元素)上使用clientWidth时(或者在body上，如果文档是在quirks(怪异)模式下)，将返回**viewport**的宽度(不包括任何滚动条)。
 
+1. element.clientWidth
+   属性表示以**像素**为单位的元素的内部宽度。属性包括内边距 padding，不包括边框 border、外边距 margin 和垂直滚动条。
+   当在根元素(html 元素)上使用 clientWidth 时(或者在 body 上，如果文档是在 quirks(怪异)模式下)，将返回**viewport**的宽度(不包括任何滚动条)。
+
+2. element.offsetWidth
+   属性返回**元素**的布局宽度。典型的 offsetWidth 包含元素边框 border，内边距 padding，竖直方向的滚动条 scrollbar 和元素的宽度 width。
+
+## MouseEvent
+
+1. event.clientX
+   事件发生时，应用客户端区域的水平坐标
+
+## [clientWidth、offsetWidth 与 scrollWidth 的区别](https://www.jianshu.com/p/2bd00720e2de)
