--- a/server/计算机概论/3.数字逻辑.md
+++ b/server/计算机概论/3.数字逻辑.md
@@ -30,19 +30,39 @@ R=1,S=1 保持
 ```
 
 2. 门控 D 锁存器
-   增加门控 D: WE（write enable）置 1 则写入，置 0 则保持
+
+   R-S 锁存器增加门控 D: WE（write enable）置 1 则写入，置 0 则保持
 
 ## 内存
 
 1B=1byte=8bit
-1KB=1024B
-1MB=1024KB
-1GB=1024MB
-1T=1024GB
+1KB=1024B  千字节（10为底，进制为1000）
+1MB=1024KB  兆字节
+1GB=1024MB  千兆字节
+1T=1024GB   兆兆字节
 
-1. 寻址空间
+64KB=2^6KB=16位 = 65536
 
-[寻址能力](https://blog.csdn.net/XJYSober/article/details/118050235)
-[关于CPU位数，OS位数以及内存大小关系的一点总结](https://www.cnblogs.com/little-YTMM/p/5058354.html)
+### 寻址空间
 
-2.
+#### [寻址能力](https://blog.csdn.net/XJYSober/article/details/118050235)
+
+#### [关于 CPU 位数，OS 位数以及内存大小关系的一点总结](https://www.cnblogs.com/little-YTMM/p/5058354.html)
+
+1. CPU 位数为一个时钟周期内处理器处理的二进制位数。
+
+    CPU 位数 = **CPU 中通用寄存器的位数** = CPU 一次并行处理的数据宽度 =  数据总线的位宽 = 机器字长
+
+2. 操作系统位数
+
+    操作系统位数 = 其所依赖的指令集位数 <= CPU 位数
+
+    操作系统位数对 CPU 位数有向上兼容，如 32 位 CPU 上运行 16 操作系统，64 位 CPU 上运行 32 位操作系统等情况。
+
+3. 内存容量与操作系统位数
+
+    **地址总线**的数目决定了操作系统的寻址范围，这种由地址总线对应的地址称为 物理地址。
+
+    一般来说 32CPU，地址总线数目为 32 位，即寻址空间为 4GB；64 位 CPU，地址总线数目为 36 或 40，即寻址空间为 64GB 或 1TB。
+
+###
