--- a/server/计算机概论/3.数字逻辑.md
+++ b/server/计算机概论/3.数字逻辑.md
@@ -51,7 +51,7 @@ R=1,S=1 保持
 
 1. CPU 位数为一个时钟周期内处理器处理的二进制位数。
 
-    CPU 位数 = **CPU 中通用寄存器的位数** = CPU 一次并行处理的数据宽度 =  数据总线的位宽 = 机器字长
+    CPU 位数 = **CPU 中通用寄存器的位数** = CPU 一次并行处理的数据宽度 =  数据总线的位宽 = 机器（CPU）字长
 
 2. 操作系统位数
 
