--- a/server/计算机导论/00.md
+++ b/server/计算机导论/00.md
@@ -1,2 +1,14 @@
-1. 数据在网络中传输以"位"为单位，因此网速的单位多为Mbps；
-数据存储以"字节"为单位，因此硬盘的读写速度为MB/s。
+1. 数据在网络中传输以"位"为单位，因此网速的单位多为 Mbps；
+   数据存储以"字节"为单位，因此硬盘的读写速度为 MB/s。
+
+2. [IP 地址计算](https://zhuanlan.zhihu.com/p/412270503)
+   > 第四问题：一个 A 类 ip 地址的子网掩码是 255.255.240.0，共有几位被用来划分子网？且可以划分多少个子网？每个子网 ip 地址数量是多少？
+   >
+   > 详细计算
+   > 将子网掩码 255.255.240.0 转换为二进制
+   > 11111111.11111111.11110000.00000000
+   > 子网掩码共有 20 位，而一个 A 类的 ip 地址的子网掩码是 8 位，即有 12 位被用来划分子网。
+   > 所以子网数为：2 的 12 次方=4096 个子网。
+   > 那么每个子网的主机数是多少呢？
+   > 因为 ip 地址为 32 位，网络号已为 20 位，则主机数 12 位。每个子网中的 ip 数量为 2^12=4096，但是能够分配给计算机使用的只有 4096-2=4094 个，（减去一个网络地址与一个广播地址）。
+   > **主机号不能全为0和全为1，子网号可以。**
