--- a/server/js/笔记/33.前端开发技巧.md
+++ b/server/js/笔记/33.前端开发技巧.md
@@ -23,7 +23,8 @@
 
 8. [typescript声明文件](https://zhuanlan.zhihu.com/p/133344957)
 
-[声明文件](https://ts.xcatliu.com/basics/declaration-files.html)
+    1. [声明文件](https://ts.xcatliu.com/basics/declaration-files.html)
+    2. egg-ts-helper egg在应用程序中创建d.ts简单工具
 
 9. react16、高阶组件、redux
 
