--- a/server/js/笔记/28.https.md
+++ b/server/js/笔记/28.https.md
@@ -17,3 +17,16 @@
 1. 服务器不存 session，验证数据存在浏览器，解决：单点登录、服务器集群架构的验证问题
 
 2. 缺点是无法在使用过程中废弃某个 token 或者更改权限，只能等 jwt 失效
+
+## [tsl/ssl](https://tinychen.com/20200602-encryption-intro/)
+
+### 网站部署 ssl 证书
+
+部署 ssl 证书是实现 https 访问的必要操作（数字证书是部署HTTPS认证的网站的必需品）。
+
+
+### [证书颁发和浏览器验证书的合法性](https://www.zhihu.com/question/37370216/answer/1914075935)
+
+### 什么是 ERR_SSL_PROTOCOL_ERROR 错误
+
+用 http协议 访问一个部署了 ssl 证书的服务，解决方式：1. 更换为使用https地址；
