--- a/server/js/笔记/33.前端开发技巧.md
+++ b/server/js/笔记/33.前端开发技巧.md
@@ -15,6 +15,11 @@
 
 4. [xss 和 csrf](https://juejin.cn/post/6844903638532358151)
 
+5. ssl(secure sockets layer)安全套接层
+    tsl(transport layer security)传输层安全协议 定义了对网络发出的数据加密的格式和规则
+
+![ssl](../imgs/ssl.png)
+
 5. [跨域和解决方式](https://juejin.cn/post/6844903767226351623)
 
 6. [require 和 es6模块化规范](https://zhuanlan.zhihu.com/p/121770261)
