--- a/server/js/笔记/33.前端开发技巧.md
+++ b/server/js/笔记/33.前端开发技巧.md
@@ -34,3 +34,7 @@
 9. react16、高阶组件、redux
 
 10. 富文本编辑器、markdown编辑器
+
+11. [大文件上传和断点续传](https://juejin.cn/post/6844904046436843527#heading-20)
+
+    blob、web worker、spark-md5
