--- a/server/js/笔记/9.webpack.md
+++ b/server/js/笔记/9.webpack.md
@@ -2,21 +2,23 @@
 
 1. webpack 流程
 
-loader和webpack通信：通过webpack给loader注入的this.callback(err: Error | null, content: string | Buffer, sourceMap?: SourceMap, abstractSyntaxTree?: AST)Api。
+loader 和 webpack 通信：通过 webpack 给 loader 注入的 this.callback(err: Error | null, content: string | Buffer, sourceMap?: SourceMap, abstractSyntaxTree?: AST)Api。
 
-plugin和webpack通信：通过事件回调
+plugin 和 webpack 通信：通过事件回调
 
 2. 钩子函数和回调函数的异同
+
 ```
 let btn = document.getElementById("btn");
 btn.onclick = () => { // 钩子函数
     console.log('我是钩子函数');
 }
- 
+
 btn.addEventListener('click', () => { // 回调函数
     console.log('我是回调函数');
 });
 ```
+
 同：都是事件处理函数
 异：触发的时机不同。钩子函数在捕获消息的第一时间执行，回调函数是捕获结束时，最后一个被执行
 钩子函数
@@ -27,3 +29,7 @@ btn.addEventListener('click', () => { // 回调函数
 ## webpack 主要组成
 
 ## webpack 配置、插件、api
+
+## [webpack 按需加载](https://zhuanlan.zhihu.com/p/66212099)
+
+1. [动态 import 模块](https://juejin.cn/post/6895375915140939790)
