--- a/server/js/笔记/17.react全家桶.md
+++ b/server/js/笔记/17.react全家桶.md
@@ -11,3 +11,6 @@ class A extends React.Component {
   }
 }
 ```
+2. [connect函数解析](https://juejin.cn/post/6844903505191239694)
+
+3. [redux异步dispatch解决方案之redux-thunk](https://www.cnblogs.com/dennisj/p/13637411.html)
