--- a/server/js/笔记/17.react全家桶.md
+++ b/server/js/笔记/17.react全家桶.md
@@ -1,4 +1,4 @@
-1. react
+### react
    render props: props 中传递的是该渲染组件应该渲染的内容
    类似 vue 的 slot??
 
@@ -7,10 +7,26 @@
 // 在鼠标悬浮的地方，可以显示任何内容
 class A extends React.Component {
   render() {
-    return <B render={state => <C state={state} />}></B>;
+    return <B render={(state) => <C state={state} />}></B>;
   }
 }
 ```
-2. [connect函数解析](https://juejin.cn/post/6844903505191239694)
 
-3. [redux异步dispatch解决方案之redux-thunk](https://www.cnblogs.com/dennisj/p/13637411.html)
+### [connect 函数解析](https://juejin.cn/post/6844903505191239694)
+
+### [redux 异步 dispatch 解决方案之 redux-thunk](https://www.cnblogs.com/dennisj/p/13637411.html)
+
+### react hooks
+
+#### [react 中的 useRef](https://juejin.cn/post/6996171186719686693)
+
+- state 和 props 在每次渲染都是独立的，useRef 作为不同渲染的纽带
+
+### [react 中的 useLayoutEffect](https://juejin.cn/post/6959372766114119688)
+
+- useRef 与 userLayoutEffect 的区别
+
+ ### [fiber](https://juejin.cn/post/6962449722275528712)
+
+
+ ### [React.createElement]()
