--- a/server/js/笔记/1.对象和继承.md
+++ b/server/js/笔记/1.对象和继承.md
@@ -31,6 +31,8 @@ var person1 = new Person();
 person1.constructor === Person; // true
 // 等价于
 person1.__proto__.constructor === Person; // true
+
+Person.prototype.constructor === Person; // true
 ```
 
 ## 创建对象
@@ -59,7 +61,7 @@ console.log(factory1 instanceof factoryFoo); // false
 ```js
 function Person(name) {
   this.name = name;
-  this.sayName = function(name) {
+  this.sayName = function (name) {
     console.log(this.name);
   };
 }
@@ -86,22 +88,22 @@ console.log(person1 instanceof Person); // true
 
 > 每一个函数上都有一个 prototype 属性，这个属性是一个指针，指向一个对象，这个对象包含了一些属性和方法，这些属性和方法可以被所有由这个函数创建的实例所共享。
 
-> 每个构造函数拥有prototype属性，指向构造函数的原型对象，这个原型对象有一个constructor属性指回构造函数；
-  每个实例都拥有__proto__属性，当使用构造函数创建实例时，实例的__proto__属性将指向构造函数的原型对象。
-  
-  ```js
-  function Person() {}
-  var personl = new Person();
-  Person.prototype.constructor === Person; // true
-  personl.__proto__ === Person.prototype; // true
-  ```
+> 每个构造函数拥有 prototype 属性，指向构造函数的原型对象，这个原型对象有一个 constructor 属性指回构造函数；
+> 每个实例都拥有**proto**属性，当使用构造函数创建实例时，实例的**proto**属性将指向构造函数的原型对象。
+
+```js
+function Person() {}
+var personl = new Person();
+Person.prototype.constructor === Person; // true
+personl.__proto__ === Person.prototype; // true
+```
 
 ```js
 function Person() {}
 console.log(Person.prototype.constructor); // Person
 // 修改 prototype 的指向，constructor 指向被重写
 Person.prototype = {
-  a: 1
+  a: 1,
 };
 console.log(Person.prototype.constructor); // Object
 ```
@@ -113,7 +115,7 @@ function Person() {}
 console.log(Person.prototype.constructor); // Person
 Person.prototype = {
   a: 1,
-  constructor: Person
+  constructor: Person,
 };
 console.log(Person.prototype.constructor); // Person
 ```
@@ -135,7 +137,7 @@ console.log(Person.prototype.constructor); // Person
 ```js
 function ArrayPlus() {
   var plus = [];
-  plus.pipeStr = function() {
+  plus.pipeStr = function () {
     return this.join("|");
   };
   return plus;
@@ -162,9 +164,9 @@ plus1 instanceof Array; // true
 ```js
 function Person(age) {
   return {
-    getAge: function() {
+    getAge: function () {
       return age;
-    }
+    },
   };
 }
 var p1 = Person(12);
@@ -175,6 +177,8 @@ p1 instanceof Person; // false
 ```
 
 ## 继承
+
+通过原型对象和构造函数相结合的模式，可以批量生成对象。这种模式称为 ECMAScript 中的 类。批量生成类，需要用到继承。继承主要通过原型链实现。
 
 > 利用原型链，让一个引用类型继承另一个引用类型的属性和方法。
 > 即：子构造函数的 prototype 指向父构造函数的 **实例**。
@@ -230,7 +234,7 @@ Object.getPrototypeOf(Object.prototype); // null
 function Father(name) {
   this.name = name;
 }
-Father.prototype.sayName = function() {
+Father.prototype.sayName = function () {
   console.log("hello:", this.name);
 };
 function Son(name) {
@@ -302,7 +306,7 @@ function inheritFatherPrototype(Son, fatherPrototype) {
 function Father(name) {
   this.name = name;
 }
-Father.prototype.sayName = function() {
+Father.prototype.sayName = function () {
   console.log(this.name);
 };
 function Son(name) {
@@ -316,3 +320,12 @@ son1.sayName(); // Tom
 
 > 注：指定 O.prototype.constructor = O 的原因：1. 为了正确的继承回溯；2. 为了 instanceof 运算符可以返回正确的结果。需要根据实际情况，是否需要修改 constructor 。
 > prototype 方法 还是 静态方法 的区别 ? ?
+
+
+##### 原型相关的操作
+
+```js
+// getPrototypeOf()方法
+// instanceof 操作符
+// isPrototypeOf()方法
+```
