--- a/server/js/笔记/39.缓存方案.md
+++ b/server/js/笔记/39.缓存方案.md
@@ -1,1 +1,3 @@
-[浏览器缓存](https://zhuanlan.zhihu.com/p/28113197)
+[浏览器缓存](https://www.jianshu.com/p/54cc04190252)
+
+[八股文](https://juejin.cn/post/7016593221815910408)
