--- a/server/2022/1.music.md
+++ b/server/2022/1.music.md
@@ -41,7 +41,7 @@
 
 ![调号](./imgs/1.jpg)
 
-2. 最右边的调号所在的五线谱位置所对应的音名，向上加一个全音，就是调的名称。
+2. 最右边的调号所在的五线谱位置所对应的音名（不看升降记号），向上加一个全音，就是调的名称。
 
 ![调的名称](./imgs/2.jpg)
 
@@ -50,6 +50,16 @@
 #### [十二个大调音阶](https://zhuanlan.zhihu.com/p/104836703)
 
 (3+4)个白键 + (2+3)个黑键
+
+##### 临时变音记号与调号（固定升降号）的作用范围
+
+1. 横向看
+
+临时变音记号作用于对应小节，调号作用于整首曲子。
+
+2. 纵向看
+
+临时变音记号作用于对应线或间的音（不能跨越谱号存在），调号作用于与对应线或间同音名的音。
 
 ##### 低音谱号
 
@@ -111,19 +121,40 @@
 
 音阶由 8 个连续的音符组成
 
+### 音级
+
+一组白键里，有 7 个基础音级。
+
 ### [音程](https://mp.weixin.qq.com/s/MA7kjTrs7kcyLxTZTyrUyA)
+
+一个八度包含十二个半音
+
+音程分两类：
+
+1. 自然音程：大、小、纯、增四度、减五度
+2. 变化音程：除了自然音程的其他增减音程
+
+#### ![大、小、纯三种音程的半音个数对照表](./imgs/3.jpg)
+
+1. 几度计算是根据两个音（不看变音记号）在五线谱上的位置，而不是在琴键上的位置决定。这样才会产生增减音程。
+2. 通过判断两个音之间有几个相邻白键是半音关系，即可判断是是哪种类型的音程。比如：do 到 la 是 6 度。两个音之间只有 1 个半音，则是大六度；si 到 sol 是 6 度，两个音之间有两个半音，则是小六度。增减等在此基础结构之上找即可。
+
+#### ![增减音程变化图](./imgs/4.jpg)
+
+增减音程都是以大、小、纯三种音程为基础，通过增减半音得到。若增加半音，则向右移动一格；若减少半音，则向左移动一格。
 
 ### 音名
 
+C D E F G A B
+
 ### 唱名
+
+do re mi fa sol la si
 
 ### 音律
 
 十二平均律
 
 ### [声部](https://zhuanlan.zhihu.com/p/68745036)
-
-
-
 
 [待看超长乐理](https://zhuanlan.zhihu.com/p/31864712)
