--- a/server/2022/1.music.md
+++ b/server/2022/1.music.md
@@ -134,10 +134,29 @@
 1. 自然音程：大、小、纯、增四度、减五度
 2. 变化音程：除了自然音程的其他增减音程
 
+#### 同一个音高，用升号或降号标记的区别
+
+1. 大调半音阶上行时是用降七级代替升六级，因为升 6 级不可能存在于任何关系调中，其余大二度间都是用升音级填入；
+2. 大调半音阶上行降 7 不升 6，下行升 4 不降 5；
+3. 小调半音阶上下行只能降 2 不能升 1；
+4. 在大调下行半音进行中应用升 4 级代替降 5 级；
+5. 从绝对音高上说，降 7 就是升 6，这样类似的例子有很多，至于什么时候叫降 7，什么时候叫升 6，这和乐理中“音程”的相关知识密切相关：
+
+   半音阶的写法是以调性关系为依据的.每一个带有变音记号的音,在某种意义上,它已经成为“导音”,它需要“解决”,即由不稳定音解决到稳定音,稳定音即音阶中原来的自然音,所以,6 后面不能记写成#6,而要记写成 b7。
+
+6. 带半音的音阶一般升降音取前面的还是后面的？
+   七个音使用四个升号 三个降号.所以平时我们接触到的调大多是升 C 大调,升 G 大调,降 B 大调,降 E 大调等,而很少听说过降 G 降 F 升 A 升 B 等调。
+
 #### ![大、小、纯三种音程的半音个数对照表](./imgs/3.jpg)
 
+音程的命名是先定音级数，再定音程关系的大小。
+
 1. 几度计算是根据两个音（不看变音记号）在五线谱上的位置，而不是在琴键上的位置决定。这样才会产生增减音程。
-2. 通过判断两个音之间有几个相邻白键是半音关系，即可判断是是哪种类型的音程。比如：do 到 la 是 6 度。两个音之间只有 1 个半音，则是大六度；si 到 sol 是 6 度，两个音之间有两个半音，则是小六度。增减等在此基础结构之上找即可。
+2. 通过判断两个音之间有几个相邻白键是半音关系，即可判断是是哪种类型的音程。
+   1. do 到 la 是 6 度。两个音之间只有 1 个半音，则是大六度；
+   2. si 到 sol 是 6 度，两个音之间有两个半音，则是小六度。增减等在此基础结构之上找即可。
+   3. 6 与降 7 的关系：6 7，两个音级，为二度音程；6 与降 7 是半音关系，因此为小二度音程；
+   4. 6 与升 6 的关系：6 一个音级，为一度音程；6 与升 6 是半音关系，因此为增一度音程。
 
 #### ![增减音程变化图](./imgs/4.jpg)
 
@@ -158,3 +177,7 @@ do re mi fa sol la si
 ### [声部](https://zhuanlan.zhihu.com/p/68745036)
 
 [待看超长乐理](https://zhuanlan.zhihu.com/p/31864712)
+
+### 待解决问题
+
+1. 为什么半音音阶后面的 6 不是升 6 而是降 7?
