--- a/server/2023/北京/1.beijing.md
+++ b/server/2023/北京/1.beijing.md
@@ -17,9 +17,9 @@
 
 ## D1 （04.29）四季民福
 
-![航班](./imgs/flight.jpg)
+<img src=./imgs/flight.jpg width=300 align='center' />
 
-![机场到酒店大巴](./imgs/arrive.jpg)
+<img src=./imgs/arrive.jpg align='center' />
 
 1. 抵达首都机场 T3 为 1 点 40，直接坐大巴到酒店（暂定住在王府井片区，全季酒店），放下行李后去四季民福（四季民福号不好排，可以到小红书找代排，保证一定吃上）
 
