--- a/server/2023/北京/1.beijing.md
+++ b/server/2023/北京/1.beijing.md
@@ -19,9 +19,9 @@
 
 <img src=./imgs/flight.jpg width=300 align='center' />
 
-<img src=./imgs/arrive.jpg align='center' />
+<img src=./imgs/arrive.jpg />
 
-1. 抵达首都机场 T3 为 1 点 40，直接坐大巴到酒店（暂定住在王府井片区，全季酒店），放下行李后去四季民福（四季民福号不好排，可以到小红书找代排，保证一定吃上）
+1. 抵达首都机场 T3 为 1 点 40，直接坐大巴到酒店（暂定住在王府井片区，全季酒店。打车约30km，也可以），放下行李后去四季民福（四季民福号不好排，可以到小红书找代排，保证一定吃上）
 
 2. 晚上可以散散步，早点休息，准备第二天的早餐（不建议吃酒店的早餐，第二天行程比较早）
 
@@ -45,4 +45,4 @@
 
 ## D5（05.03）雍和宫/天坛公园/北海公园/什刹海/南锣鼓巷、庆丰包子
 
-1. 早上可以简单逛逛人不是很多的地方，吃完午饭就要出发去机场了
+1. 早上可以简单逛逛人不是很多的地方，吃完午饭就要出发去机场了。
