--- a/server/css/元素或标签/1.canvas.md
+++ b/server/css/元素或标签/1.canvas.md
@@ -1,17 +1,16 @@
 # 设置 canvas 元素 width 和 height 的两种方式
 
 1. canvas 实际上有两套尺寸，一个是元素本身的大小，另一个是元素绘图表面（drawing surface）的大小。通过 CSS 只能改变**元素**本身的尺寸，而通过 canvas 标签属性能够改变元素本身和元素绘图表面的大小。
+   **注 1：元素本身的大小，就是绘制在 html 页面里面显示的元素大小；元素绘图表面大小，就是画布的大小。缩放是把画布放大或者缩小以适应元素大小。**
 
 2. canvas 的默认大小是 300\*150 像素。
 
 3. 当 css 设置的 width 和 height 与元素上直接设置的值不相同时，浏览器会对**绘图表面**进行缩放，以适应**元素**大小。缩放机制如下：
+   我们用 element 表示 canvas 元素，用 canvas 表示绘图表面，src 表示绘制的内容，dest 表示展示的内容，缩放规则为：dest.size = src.size \* (element.size / canvas.size)。
+   即：先按照绘制表面的尺寸绘制出元素，再缩放（元素尺寸为标准 1）。坐标也是相同的偏移规则。
+   **注：3 这里是浏览器的逻辑，只需要知道画布的大小，在画布绘图需要进行缩放，和元素的大小即可**
 
-我们用 element 表示 canvas 元素，用 canvas 表示绘图表面，src 表示绘制的内容，dest 表示展示的内容，缩放规则为：dest.size = src.size \* (element.size / canvas.size)。
-
-即：先按照绘制表面的尺寸绘制出元素，再缩放（元素尺寸为标准 1）。坐标也是相同的偏移规则。
-
-4. 在移动端，画布的大小要根据屏幕的大小进行适配。要做 Retina 屏适配，关键是知道当前屏幕的设备像素比，然后将 canvas 放大到该设备像素比来绘制，然后将 canvas 压缩到一倍来展示。
-
-即：
-要设置 canvas 的画布大小，使用的是 canvas.width 和 canvas.height；
-要设置画布的实际渲染大小，使用的 style 属性或 CSS 设置的 width 和 height，只是简单的对画布进行缩放。
+4. 在移动端，画布的大小要根据屏幕的大小进行适配。要做 Retina 屏适配，关键是知道当前屏幕的设备像素比，然后将 canvas 放大到该设备像素比来绘制，然后将 canvas 压缩到一倍来展示。即：
+   要设置 canvas 的画布大小，使用的是 canvas.width 和 canvas.height；
+   要设置画布的实际渲染大小，使用的 style 属性或 CSS 设置的 width 和 height，只是简单的对画布进行缩放。
+   **注：画布的大小需要根据需要根据设备像素比计算，例如 retina 屏幕，会用两个像素来渲染图片的 1 个像素**
