--- a/server/css/5.移动端网页适配.md
+++ b/server/css/5.移动端网页适配.md
@@ -14,8 +14,15 @@ rem 定义字号
 vw vh 定义容器
 
 1pt = 1/72inch
-1inch = dpi \* 1px （windows 默认为 96，ios 默认为 72）
-=> 1pt = 4/3 px （windows）
+**pt (point，磅) 是一个物理长度单位，指的是72分之一英寸。**
+
+~~1inch = dpi \* 1px （windows 默认为 96，ios 默认为 72）~~
+~~=> 1pt = 4/3 px （windows）~~
+pt和px的换算公式可以根据pt的定义得出:
+1pt=1/72(英寸), 1px=1/dpi(英寸)
+因此 pt=px*72/dpi
+以Windows下的96dpi来计算，pt=px*72/96=px*3/4
+**px (pixel，像素)是一个虚拟长度单位，是计算机系统的数字化图像长度单位，如果px要换算成物理长度，需要指定精度DPI(Dots Per Inch，每英寸像素数)，在扫描打印时一般都有DPI可选。Windows系统默认是96dpi，Apple系统默认是72dpi。**
 
 大多数浏览器默认 HTML 的字号为 16px
 
