--- a/server/2022/1.music.md
+++ b/server/2022/1.music.md
@@ -22,7 +22,11 @@
 
 分清楚：调性、调性的名称（C 大调）、调号（#FA）
 
-#### 大调音阶：全全半全全全半
+音阶分上行和下行音阶
+
+#### 自然大调音阶：全全半全全全半
+
+#### 自然小调音阶：全半全全半全全
 
 如：C 大调
 
@@ -35,9 +39,67 @@
 
 #### 如何记住和认识调号
 
+#### 调号的五度循环，[什么是五度循环](https://zhuanlan.zhihu.com/p/58095100)
+
+> 取第五个音作为根音：其实就是音高一个纯五度
+
+![大调音阶-上行](./imgs/5.jpg)
+
+1. C 大调
+
+取 C 大调的第五个音 G 作为根音：
+
+2. G 大调（升 fa）
+
+取 G 大调的第五个音 D 作为根音：
+
+3. D 大调（升 fa 升 do ）
+
+取 D 大调的第五个音 A 作为根音：
+
+4. A 大调（升 do 升 fa 升 sol）
+
+> 找第五个音，等同于往回间隔两个音
+
+取 A 大调的第五个音 E 作为根音：
+
+5. E 大调
+
+取 E 大调的第五个音 B 作为根音：
+
+6. B 大调
+
+> 如何快速定位需要升哪些音？找根音与 C 音关于与半音之间的位置关系（或者看跨过几个半音？）:
+
+B 与 C 相差半音，因此在 C 大调音阶上整体加半音：升 do 升 re 升 fa 升 sol 升 la
+
+......
+
+##### 升号调
+
+从C开始，依次增加纯五度：#F、#C、#G、#D、#A、#E、#B （神奇的发现：间隔着是 fa sol la si do re mi）
+对应的调号，为：G大调、D大调、A大调、E大调、B大调、#F大调、#C大调
+
+###### 为什么是 5 度？
+
+1. 音程和音数的关系：
+
+纯 5 度(音数为三又二分之一的五度)：A-G
+
+> 已知在基本音级中，E 到 F，B 到 C 之间是半个音，其他都是全音。已知纯八度的音数是 6，包含两个半音（8-1-0.5\*2=6）；纯 5 度包含一个半音（5-1-0.5=3.5），音数为三又二分之一。
+
+2. 在基本音级中，相邻两个音的音程为：
+
+大二度，大二度，小二度，大二度，大二度，大二度，小二度 -> (全 全 半 全 全 全 半)
+
+3. 为啥？
+
+
+##### [五度循环怎么用](https://www.feifanjita.net/public/a/wu-du-xun-huan.html)
+
 ##### 高音谱号
 
-1. 调号是固定的，以 5 度的关系为基础来增长，因此调号会固定标在五线谱的固定位置：不管有几个升号，第一个都是升 fa，第二个是升 do，以此类推。
+1. 调号是固定的，以 5 度的关系为基础来增长，因此调号会固定标在五线谱的固定位置：不管有几个升号，第一个都是升 fa，第二个是升 do，第三个是升 sol，以此类推。
 
 ![调号](./imgs/1.jpg)
 
