--- a/server/2022/经验总结.md
+++ b/server/2022/经验总结.md
@@ -2,14 +2,16 @@
 
 ## 上课笔记回忆
 
-1. 大三弦 7度和弦 9度和弦
+1. 大三弦 7 度和弦 9 度和弦
 2. 重复记号
 3. 快速识谱
-4. 
+4.
 
 ## 节拍
 
 1. 1 拍是基准，要稳定，不能忽快忽慢；
 2. 一拍若为：下上；一拍半结束后下一个音的位置，在打拍子的“上”时按下，也即听到拍子第二次打下后按下；
-3. 3/4 拍：每一小节重新开始计算 3 拍，可以用来纠正错拍；
+3. 3/4 拍：每一小节重新开始计算 3 拍，可以用来纠正错拍；（3/4 拍的意思：以四分音符为一拍，每小节 3 拍）
 4. 对于拍子复杂的，可以通过凑整数拍纠正错拍：例如 4/4 拍，一小节由：1.5 拍 0.5 拍 1.5 拍 0.5 拍 构成时，凑整的两拍用来卡“下上”是否正确卡拍
+5. 左右手的合拍，在乐谱上看，是符头对应，不是线对应；
+6. 对于拍子层次复杂的曲子，可以把最小的节拍作为 1 拍，这样来计算拍子；
