--- a/server/js/笔记/计算机基础/2.数据处理对象.md
+++ b/server/js/笔记/计算机基础/2.数据处理对象.md
@@ -76,6 +76,9 @@ File 就是 Blob 里面的一个小类，继承 Blob 的方法和属性，附加
 
 ```
 
+
+1. 将 Blob 作为 URL 资源使用
+
 ```js
 // createObjectURL：获取指向当前文件的内存url
 ```
@@ -89,7 +92,7 @@ File 就是 Blob 里面的一个小类，继承 Blob 的方法和属性，附加
 ## 运用
 
 ```js
-// 将canvas转为base64 toDataURL
+// 将canvas转为base64 toDataURL(toDataURL可以改变图片的质量)
 const canvas = document.createElement('canvas');
 const ctx = canvas.getContext('2d');
 const img = new Image;
@@ -169,6 +172,14 @@ blobToFile: function (theBlob, fileName) {
 ## 综合应用：图片压缩
 
 ```js
+/**
+ * 1. input 读取到 文件 ，使用 FileReader 将其转换为 base64 编码
+ * 2. 新建 img ，使其 src 指向刚刚的 base64
+ * 3. 新建 canvas ，将 img 画到 canvas 上
+ * 4. 利用 canvas.toDataURL/toBlob 将 canvas 导出为 base64 或 Blob
+ * 5. 将 base64 或 Blob 转化为 File 
+ * 
+ */
 const maxSize = 2 * 1024 * 1024; // 2M
 const maxWidth = 1080;
 const maxHeight = 1080;
