--- a/server/2022/1.music.md
+++ b/server/2022/1.music.md
@@ -103,7 +103,7 @@ B 与 C 相差半音，因此在 C 大调音阶上整体加半音：升 do 升 r
 
 ![调号](./imgs/1.jpg)
 
-2. 最右边的调号所在的五线谱位置所对应的音名（不看升降记号），向上加一个全音，就是调的名称。
+2. 最右边的升号上移一个小二度（二分之一）所得的音，就是调号。
 
 ![调的名称](./imgs/2.jpg)
 
